# KerrTraceCpp2

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  camera.hpp  geodesic.hpp  knds_metric.hpp  main.cpp  ray_bundle.hpp  wormhole_metric.hpp
.github/workflows/: ci.yml
frontend/: package-lock.json  package.json  proxy.conf.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.html  app.scss  app.ts  numeric-input.component.ts  render.service.ts
gpu/cuda/: tracer.cu  tracer.cuh
gpu/metal/: metal_renderer.hpp  metal_renderer.mm  tracer.metal
server/: index.js  package-lock.json  package.json
tests/: bump_detector.cpp  core_tests.cpp  spin_orientation_regression.cpp
